remmina (0.7.0-1) UNRELEASED; urgency=low

  * Grdc is now Remmina.
  * New upstream release.
  * debian/patches/desktop_file.patch:
    - Removed, fixed upstream.
  * debian/control:
    - Refresh build-dependencies.
    - Move rdesktop to Depends.
    - Improve long descrription adding new supported protocols.
  * debian/copyright:
    - Adjust copyright informations.

 -- Luca Falavigna <dktrkranz@debian.org>  Sun, 13 Dec 2009 18:32:48 +0100

grdc (0.6.0-2) unstable; urgency=low

  * Add libgcrypt-dev to Build-Depends.
  * Build-depend on libssh-dev instead of libssh-2-dev.
  * Switch to Section: gnome to match override.

 -- Luca Falavigna <dktrkranz@debian.org>  Tue, 27 Oct 2009 20:14:12 +0100

grdc (0.6.0-1) unstable; urgency=low

  * Initial release (Closes: #537292).

 -- Luca Falavigna <dktrkranz@debian.org>  Tue, 25 Aug 2009 23:59:55 +0200
