@@ -2,7 +2,7 @@ Source: remmina
 Section: gnome
 Priority: optional
 Maintainer: Luca Falavigna <dktrkranz@debian.org>
-Build-Depends: debhelper (>= 7), intltool (>= 0.35.0), libglib2.0-dev (>= 2.20.0), libgtk2.0-dev (>= 2.16.0), libvncserver-dev, libssh-dev (>= 0.4), libavahi-ui-dev (>= 0.6.22), libvte-dev (>= 0.12.0), libgcrypt11-dev (>= 1.4.0), libunique-dev, libgnutls-dev
+Build-Depends: debhelper (>= 7.0.50), intltool (>= 0.35.0), libglib2.0-dev (>= 2.20.0), libgtk2.0-dev (>= 2.16.0), libvncserver-dev, libssh-dev (>= 0.4), libavahi-ui-dev (>= 0.6.22), libvte-dev (>= 0.12.0), libgcrypt11-dev (>= 1.4.0), libunique-dev, libgnutls-dev
 Standards-Version: 3.8.3
 Homepage: http://remmina.sourceforge.net/
 Vcs-Git: git://git.debian.org/git/users/dktrkranz/remmina.git
