@@ -10,8 +10,11 @@ remmina (0.7.0-1) UNRELEASED; urgency=low
     - Improve long descrription adding new supported protocols.
   * debian/copyright:
     - Adjust copyright informations.
+  * debian/rules:
+    - Generate po/POTFILES.skip at runtime to avoid generating po files
+      for unneeded elements.
 
- -- Luca Falavigna <dktrkranz@debian.org>  Sun, 13 Dec 2009 18:32:48 +0100
+ -- Luca Falavigna <dktrkranz@debian.org>  Mon, 14 Dec 2009 00:16:29 +0100
 
 grdc (0.6.0-2) unstable; urgency=low
 
